This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.5.6
  BugFix: When copying files to VCS system, destination file was
    not checked out (#1828930)

WinMerge 2.7.5.5 - 2007-11-08 (r4722)
  Bugfix: Don't enable merge GUI for ignored differences (#1826375)
  BugFix: PgUp key caused the error message "An invalid argument was
    encountered" when word-wrap mode was on (#1820631)
  BugFix: Keep selected items visible in Folder Compare columns dialog (r4715)
  BugFix: Disable Folder Compare column selection dialog's up/down buttons
    when first/last items are selected (r4716)
  BugFix: Many translation-system related fixes and improvements (#1804762)
  Add Croatian translation (#1820308)
  Translation updates:
  - Chinese Traditional (#1824691)

WinMerge 2.7.5.4 - 2007-11-01 (r4687)
  New PO files based translation system (#1804762)
  New folder compare column selection dialog (#1804555)
  Install WinMerge.exe (ANSI version) only for Windows 95/98/ME (#1809140)
  Better multi-monitor support, with option to lock panes (#1788168)
  Installer: Install PO files and MergeLang.dll (#1820689)
  BugFix: Ignored differences were merged when merging multiple
    differences (#1811745)
  Bugfix: Don't clear selection when right-clicking outside it (#1814184)
  Bugfix: Configuration log labeled Vista as Longhorn (#1815859)
  Bugfix: Customized text color for ignored differences didn't shown (#1807895)
  Translation updates:
  - Chinese Traditional (#1810192, #1810541)
  - Italian (#1805044)

WinMerge 2.7.5.3 - 2007-09-27 (r4572)
  Use PO files for translations (generate RC-files from PO-files)
  Add Portuguese translation (#1756364)
  Change Up/Down button names in folder compare columns dialog(#1800064)
  BugFix: Fix MakeResDll crash (#1795421)
  BugFix: Full screen mode didn't work with multiple monitors (#1788168)